Revert "Migrate to from java 21 to 8 to future support 1.8.8+"
This reverts commit 4e371e42d26373c4787002807618bed926675e73.